--- a/_posts/2023-02-01-macbook.md
+++ b/_posts/2023-02-01-macbook.md
@@ -1,11 +1,9 @@
 ---
-title: macbook 解决外接两块屏幕以上时偶尔失效的问题
+title: Macbook 解决外接两块屏幕以上时偶尔失效的问题
 tags: macos
 ---
 
-我的工作机是一台 macbook pro, 外接了两个显示器, 
-
-由于平时的工作(以及接老婆)的需要, 经常要外带笔记本, 回家的时重新连接屏幕,就会时长出现这个问题:
+我的工作机是一台 macbook pro, 外接了两个显示器, 由于平时的工作(以及接老婆)的需要, 经常要外带笔记本, 回家的时重新连接屏幕,就会时长出现这个问题:
 
 两个屏幕只会点亮一个, 剩下的一个是熄灭状态.
 
